fix :bulb: /fix the height of form (while in register option) to not overflow its parent element

--- a/src/components/form/Form.scss
+++ b/src/components/form/Form.scss
@@ -38,7 +38,7 @@ form{
     }
 }
 
-@media screen and (min-wdith:380px){
+@media screen and (min-width:380px){
     form{
         label{
             margin-bottom:-1em;
