--- a/src/components/mainApp/MainApp.scss
+++ b/src/components/mainApp/MainApp.scss
@@ -38,9 +38,3 @@
         }
     }
 }
-
-@media screen and (max-width:379px){
-    .mainApp{
-        border:1px solid red;
-    }
-}
