--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jersey+25&display=swap');
 :root{
     --VibrantRed: #ff0000;
     --VibrantYellow: #ffd900;
@@ -125,4 +126,7 @@ body{
     place-items:center;
     animation-duration: 1s;
     animation-iteration-count:calc(1);
+}
+h1,h2,h3,h4,h5,h6{
+    font-family:'Jersey 25';
 }
